# tracewise

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  verify.yml
docker/: Dockerfile  docker-compose.yml
scripts/release/: check_tag_version.py  smoke_test_installed_package.py
tests/: conftest.py
tests/integration/: test_api.py
tests/testapp/: main.py
tests/unit/: test_context.py  test_decorators.py  test_enrichment.py  test_httpx.py  test_ids.py  test_init.py  test_logging_handler.py  test_middleware.py  test_models.py  test_release_helpers.py  test_release_workflows.py  test_sqlalchemy.py  test_storage.py  test_tasks.py  test_traceparent.py  test_viewer_static.py
tracewise/: __init__.py  config.py
tracewise/core/: context.py  ids.py  models.py  traceparent.py
tracewise/instrumentation/: decorators.py  httpx.py  logging.py  middleware.py  sqlalchemy.py  tasks.py
tracewise/storage/: base.py  sqlite.py
tracewise/viewer/: api.py  app.py
tracewise/viewer/static/: app.js  index.html
