[project]
name = "tracewise"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0,<1.0",
]

[project.optional-dependencies]
dev = [
    "uvicorn[standard]",
    "httpx",
    "pytest",
    "pytest-asyncio",
    "anyio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
